tests/run-pass/assignment.dino
fn main() {
    let x = 10;
    print_int(x);
    x = 12;
    print_int(x);
}
