tests/compile-fail/type-mismatch.dino
fn main() {
    let x: int = 10j;
    x = b"abc";
}
